--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,7 @@ section{
 video{
     object-fit: cover;
     height: 100%;
+    width: 100%;
     position: absolute;
     top: 0;
     z-index: -50;
